<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">손안에 교실</string>
    <string name="title_seatplan">자리배치도</string>
    <string name="title_eachrole">1인 1역</string>
    <string name="title_classtime">수업시수관리</string>
    <string name="title_message">문자보내기</string>
    <string name="title_fillinfo">기본정보 입력</string>
    <string name="title_studentinfo">학생정보</string>
    <string name="title_setting">환경설정</string>
    <string name="title_dialog_select_date">날짜 선택</string>
    <string name="title_dialog_student_edit">학생정보 수정</string>
    <string name="title_dialog_warning">Warning</string>
    <string name="title_dialog_notyetsupported">아직 지원되지 않는 기능입니다</string>
    <string name="contents_dialog_seatplan_already_exists">해당 날짜의 자리배치가 존재합니다.</string>
    <string name="contents_dialog_if_change_applydate">이 자리배치의 적용 날짜를 바꾸시겠습니까?</string>
    <string name="contents_dialog_if_edit_existing_plan">의 자리배치가 이미 존재합니다. 해당 배치도를 편집하시겠습니까?</string>
    <string name="contents_dialog_recommend_edit">학생정보를 완전 삭제하면 예전의 배치 내역에 빈 자리가 나타나거나,
        랜덤 배치시 예전에 앉았던 짝 내역이 반영되지 않는 등의 오동작을 일으킬 수 있습니다. (학생이 전학을 가게 된 경우에는 삭제하지 마시고,
        학생정보 수정을 통해 [삭제(전출)일자] 를 설정하는 것을 추천합니다).\n\n그래도 삭제하시겠습니까?</string>
    <string name="contents_dialog_confirm_delete">정말 삭제하시겠습니까?</string>
    <string name="contents_dialog_confirm_increase_row">학생 수가 전체 자리 수보다 많아 전부 배치할 수 없습니다.
        환경 설정에서 좌석 배치의 줄 수(행)를 늘려주세요.</string>
    <string name="contents_dialog_cannot_set_emtpy">남은 자리 수가 학생수보다 적어 빈자리로 고정시킬 수 없습니다.
        하나 이상의 다른 자리의 빈자리 고정을 해제하고 다시 시도해 주세요.</string>
    <string name="contents_dialog_remainstudents_not_equals">학생 명단에 변경이 있어 자리배치도를 올바르게 수정할 수 없습니다.
        배치도를 새로 생성해 주세요.</string>
    <string name="contents_dialog_notyetsupported">다음 메이저 버전 업데이트를 통해 지원 예정입니다.
        조금만 기다려 주세요 ㅠㅠ</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_new">새로 생성</string>
    <string name="action_done">저장</string>
    <string name="action_edit">수정</string>
    <string name="action_cancel">취소</string>
    <string name="action_delete">삭제</string>
    <string name="action_delete_all">전체 삭제</string>
    <string name="action_overwrite">덮어쓰기</string>
    <string name="action_history">지난 좌석표</string>
    <string name="action_confirm">확인</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_all">전부 선택</string>
    <string name="action_unselect_all">전부 해제</string>
    <string name="action_send_sms">SMS 보내기</string>
    <string name="donotshowagain">다시 보지 않기</string>
    <string name="section">section</string>
    <string name="textview">textview</string>
    <string name="icon">icon</string>
    <string name="done">done</string>
    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="deleteAll">deleteAll</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="edit_location_only">아니요. 배치만 바꿀래요</string>
    <string name="edit_date_either">네. 날짜도 바꿀래요</string>
    <string name="action_added">추가됨</string>
    <string name="action_dismiss">사라져!</string>

    <string name="remain_seats">남은 자리\n</string>
    <string name="remain_students">남은 학생\n</string>

    <string name="hint_edittext_role">역할</string>
    <string name="warning_edittext_name_is_null">이름을 입력하세요</string>
    <string name="warning_edittext_num_is_null">번호를 입력하세요</string>
    <string name="warning_existing_attendnum">이미 등록된 출석번호입니다</string>
    <string name="warning_existing_rolename">이미 등록된 역할입니다</string>
    <string name="warning_no_student_info">등록된 학생정보가 없습니다</string>
    <string name="warning_no_recipient">메세지를 전송할 대상이 없습니다</string>
    <string name="warning_no_message">메세지를 입력하세요</string>
    <string name="warning_unsaved">
        배치 정보가 저장되지 않았습니다. 무시하고 종료하시겠습니까?
        (저장하려면 오른쪽 상단의 저장 버튼을 눌러주세요)
    </string>
    <string name="warning_student_remain">
        자리를 배정받지 못한 학생이 남아있습니다. 자리를 모두 배정하고
        저장해주세요.
    </string>
    <string name="tabtitle_studentinfo">학생정보</string>
    <string name="tabtitle_roleinfo">역할정보</string>
    <string name="string_segment">분단</string>
    <string name="string_row">줄</string>
    <string name="string_left">왼쪽</string>
    <string name="string_right">오른쪽</string>

    <string name="button_toggle_empty_fix">빈자리 고정/해제</string>

    <string name="confirm_cancel_message">문자보내기를 취소하시겠습니까?</string>
    <string name="confirm_send_message">문자를 보내시겠습니까?</string>

    <!--<string name="sharedpref_student_name_list">com.iceru.teacherschores.PREF_KEY_STUDENT_LIST</string>
    <string name="sharedpref_boygirl_list">com.iceru.teacherschores.PREF_KEY_BOYGIRL_LIST</string>
    <string name="sharedpref_role_list">com.iceru.teacherschores.PREF_KEY_ROLE_LIST</string>-->

    <string name="sharedpref_key_applying_rules">com.iceru.classinhand.SHAREDPREF_APPLYING_RULES</string>
    <string name="sharedpref_key_num_histories">com.iceru.classinhand.SHAREDPREF_NUM_HISTORIES</string>
    <string name="sharedpref_key_is_boy_right">com.iceru.classinhand.SHAREDPREF_IS_BOY_RIGHT</string>
    <string name="sharedpref_key_columns">com.iceru.classinhand.SHAREDPREF_COLUMNS</string>
    <string name="sharedpref_key_rows">com.iceru.classinhand.SHAREDPREF_ROWS</string>
    <string name="sharedpref_key_rule_oldpair">com.iceru.classinhand.SHAREDPREF_RULE_OLDPAIR</string>
    <string name="sharedpref_key_rule_oldseat">com.iceru.classinhand.SHAREDPREF_RULE_OLDSEAT</string>
    <string name="sharedpref_key_rule_oldrow">com.iceru.classinhand.SHAREDPREF_RULE_OLDROW</string>

    <string name="sharedpref_title_applying_rules">적용 룰 선택</string>
    <string name="sharedpref_title_num_histories">과거 배치내역 반영 갯수 지정</string>
    <string name="sharedpref_title_is_boy_right">남/여학생 배치 지정</string>
    <string name="sharedpref_title_columns">교실 분단 수 지정 (열)</string>
    <string name="sharedpref_title_rows">교실 줄 수 지정 (행)</string>
    <string name="sharedpref_title_rule_oldpair">앉았던 짝 피하기</string>
    <string name="sharedpref_title_rule_oldseat">앉았던 자리 피하기</string>
    <string name="sharedpref_title_rule_oldrow">앉았던 줄 피하기</string>

    <string name="sharedpref_summary_current_value">현재 설정:\u0020</string>
    <string name="sharedpref_summary_boy_is_right">여학생 | 남학생</string>
    <string name="sharedpref_summary_boy_is_left">남학생 | 여학생</string>

    <!--<string name="showcase_title_input_students_info">학생정보를 입력하세요</string>
    <string name="showcase_detail_input_students_info">        등록된 학생정보가 없습니다. \"기본정보 입력\" 을 탭하여 학생정보를 입력하세요.</string>
    <string name="showcase_title_student_input_form">학생정보 입력</string>
    <string name="showcase_detail_student_input_form">        번호와 이름을 입력하고 성별을 선택하세요. 키보드의 \"확인\" 을 눌러도 입력이 가능합니다.</string>
    <string name="showcase_title_new_plan">새로운 배치를 생성하세요</string>
    <string name="showcase_detail_new_plan">메뉴를 열어 \"새로 생성\"을 선택하세요</string>
    <string name="showcase_title_history">이전 자리배치를 조회할 수 있습니다</string>
    <string name="showcase_detail_history">날짜를 탭하여 과거 자리배치도를 조회하세요</string>-->
    <string name="sorry_developing">기능 추가 예정입니다</string>
    <string name="text_empty_seat">빈 자리</string>

    <string-array name="roleconsume_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string name="crash_dialog_title">버그를 알려주세요</string>
    <string name="crash_dialog_text">        테스트 버전을 사용해 주셔서 감사합니다.
        에러 로그를 개발자에게 전송해 주시면 빠른 시일 내에 버그를 수정하겠습니다.
        \"확인\" 버튼을 누르시기만 하면 됩니다 :)</string>
    <string name="crash_dialog_comment_prompt">        덧붙이고 싶은 말:</string>
    <string name="crash_dialog_ok_toast">에러 로그가 전송되었습니다</string>


    <string name="title_activity_student_add">학생정보 등록</string>
    <string name="title_activity_seatplan_add">새로 만들기</string>
    <string name="title_activity_seatplan_detail">자리배치도</string>
    <string name="title_activity_student_detail">학생정보</string>

    <string-array name="gender_array">
        <item>남자</item>
        <item>여자</item>
    </string-array>

    <string name="hint_edittext_name">이름</string>
    <string name="hint_edittext_attendnum">번호</string>
    <string name="hint_edittext_indate">등록(전입)일자</string>
    <string name="hint_edittext_outdate">삭제(전출)일자</string>
    <string name="hint_edittext_phone">연락처</string>
    <string name="hint_textview_outdate">전출 일자 등록</string>
    <string name="hint_edittext_sendmessage">
        문자 내용 입력 (단체문자 발송 기능에 대해 충분한 검증을 거치지 못한 상태입니다.
        중요한 공지문자인 경우, 문자 발송완료 후에 사용하고 계신 기본 SMS 어플에서 문자가 제대로
        발송되었는지 꼭 확인하시기 바랍니다.)
    </string>

    <string name="year_string">년</string>
    <string name="month_string">월</string>
    <string name="day_string">일</string>

    <string-array name="dayofweek_array">
        <item>일요일</item>
        <item>월요일</item>
        <item>화요일</item>
        <item>수요일</item>
        <item>목요일</item>
        <item>금요일</item>
        <item>토요일</item>
    </string-array>

    <string name="welcome_input_students_info">환영합니다. [기본정보 입력]을 누르고 학생 정보를 입력해주세요</string>
    <string name="welcome_add_student">오른쪽 아래의 버튼을 눌러 학생정보를 추가하세요!</string>
    <string name="welcome_no_student">
        학생정보를 입력하지 않으셨나요? 왼쪽 위의 버튼을 누르고, [기본정보 입력]으로 가셔서
        학생 정보를 추가해주세요!
    </string>
    <string name="welcome_create_seatplan">오른쪽 아래의 버튼을 눌러 자리배치도를 생성해 보세요!</string>

    <string name="edit_seatplan_user_manual">
        1. 화면 하단의 버튼을 누르면 자동으로 자리배치를 생성합니다. (과거에 앉았던 자리/짝 등을 고려하여 가능한 겹치지 않도록 배치합니다)\n\n
        2. 학생이 배정된 좌석을 탭하여 자리를 맞바꾸거나 자리를 비우는 등 수동으로 배치를 수정할 수 있습니다.\n\n
        3. 화면상의 빈 좌석을 탭하면 좌/우측에 슬라이드 메뉴가 나타납니다. 슬라이드 메뉴에서\n\n
         - 해당 좌석을 빈자리로 설정 또는 해제 (“빈자리 설정/해제” 버튼 이용) 할 수 있습니다. 빈자리로 설정할 경우 자리는 [고정]됩니다.\n\n
         - 아직 좌석이 배정되지 않은 학생을 수동으로 배정할 수 있습니다. 수동으로 배정한 자리는 [고정]됩니다.\n\n
         - 좌석이 [고정]된 경우 파란 자물쇠 아이콘이 표시되며, [고정]된 자리는 자동 배치 생성에서 제외됩니다.
    </string>

    <string name="log_error_tag">com.iceru.classinhand:Error</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_assign_random">랜덤 배치하기</string>
    <string name="action_clear_all_seats">전부 비우기</string>

</resources>
