<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen
        android:key="@string/sharedpref_key_applying_rules"
        android:title="@string/sharedpref_title_applying_rules">
        <com.iceru.classinhand.ToolbarPreference
            android:key="@string/sharedpref_key_applying_rules"
            android:title="@string/sharedpref_title_applying_rules"/>
        <CheckBoxPreference
            android:key="@string/sharedpref_key_rule_oldpair"
            android:title="@string/sharedpref_title_rule_oldpair"
            android:defaultValue="true"
            android:enabled="false"/>
        <CheckBoxPreference
            android:key="@string/sharedpref_key_rule_oldseat"
            android:title="@string/sharedpref_title_rule_oldseat"
            android:defaultValue="true"
            android:enabled="false"/>
        <CheckBoxPreference
            android:key="@string/sharedpref_key_rule_oldrow"
            android:title="@string/sharedpref_title_rule_oldrow"
            android:defaultValue="true"
            android:enabled="false"/>
    </PreferenceScreen>
    <ListPreference
        android:key="@string/sharedpref_key_num_histories"
        android:title="@string/sharedpref_title_num_histories"
        android:entries="@array/sharedpref_entries_num_histories"
        android:entryValues="@array/sharedpref_entryvalues_num_histories"
        android:defaultValue="3"/>
    <ListPreference
        android:key="@string/sharedpref_key_is_boy_right"
        android:title="@string/sharedpref_title_is_boy_right"
        android:entries="@array/sharedpref_entries_is_boy_right"
        android:entryValues="@array/sharedpref_entryvalues_is_boy_right"
        android:defaultValue="true"/>
    <ListPreference
        android:key="@string/sharedpref_key_columns"
        android:title="@string/sharedpref_title_columns"
        android:entries="@array/sharedpref_entries_columns"
        android:entryValues="@array/sharedpref_entryvalues_columns"
        android:defaultValue="6"/>
    <ListPreference
        android:key="@string/sharedpref_key_rows"
        android:title="@string/sharedpref_title_rows"
        android:entries="@array/sharedpref_entries_rows"
        android:entryValues="@array/sharedpref_entryvalues_rows"
        android:defaultValue="5"/>
</PreferenceScreen>