<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.iceru.classinhand.MainActivity" >

    <!--<item
        android:id="@+id/seatplan_edit"
        android:showAsAction="always"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"/>-->

    <item
        android:id="@+id/seatplan_new"
        android:showAsAction="never"
        android:title="@string/action_new"
        android:icon="@drawable/ic_action_new"/>

    <item
        android:id="@+id/seatplan_delete"
        android:showAsAction="never"
        android:title="@string/action_delete"/>

    <item
        android:id="@+id/seatplan_delete_all"
        android:showAsAction="never"
        android:title="@string/action_delete_all"/>
</menu>
